Fix SportBugs and remove unneeded changes
Signed-off-by: Jakub Scholz <www@scholzj.com>